# D2re

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  License.md  README.md  ROADMAP.md  d2s-format.md  function-offsets.md  packets.md  pyproject.toml  read_inventory.py  requirements.txt  simulate_drops.py
d2re/: __init__.py  cli.py  doctor.py  gui.py  gui_beautified.py  gui_integrated.py
d2re/core/: __init__.py  paths.py
docs/: emulator-server-guide.md  getting-started.md  gui-workbench.md  hooking-guide.md
docs/architecture/: diablo-ui-system.md  testing-strategy.md  ui-ide-spec.md  vision.md  visual-ide-vision.md
docs/maintenance/: cleanup-checklist.md
docs/roadmap/: phase-1-foundation.md
docs/tools/: cli.md  doctor.md
examples/: find_best_seed.py
references/: combat-formulas.md  d2r-resurrected.md  d2s-format.md  dcc-dc6-format.md  function-offsets.md  item-generation.md  packets.md  skill-system.md  stat-ids.md
scripts/: __init__.py  d2s_parser.py  drop_calculator.py  item_roller.py  mpq_extract.py  packet_sniffer.py  tc_explorer.py
tests/: test_disabled_commands.py  test_gui_workbench.py
tools/: __init__.py  item_roller_impl.py  packet_sniffer_impl.py
